--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AddUp</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <main>
         <h1>Adding values up</h1>
-        <p>Please enter a list of numbers separate them with a comma</p>
-        <input type="text" name="" id="" placeholder="5,6,25,8">
-        <button>Calculate</button>
-        <p>Answer is: </p>
+        <div>
+            <p>Please enter a list of numbers separate them with a comma</p>
+            <input type="text" name="" id="" placeholder="5,6,25,8">
+            <button>Add</button>
+            <p>Total sum is: </p>
+
+        </div>
     </main>
 
     <script src="./script/task5.js"></script>
